--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +109,9 @@
     "        for i in range(self.vspace_dim + 1):\n",
     "            for j in range(self.vspace_dim + 1):\n",
     "                for k in range(self.vspace_dim + 1):\n",
-    "                    s_i = self.grade_to_slice[i]\n",
-    "                    s_j = self.grade_to_slice[j]\n",
-    "                    s_k = self.grade_to_slice[k]\n",
+    "                    s_i = self.grade2slice[i]\n",
+    "                    s_j = self.grade2slice[j]\n",
+    "                    s_k = self.grade2slice[k]\n",
     "                    \n",
     "                    # m is a 3D tensor, capturing whether basis of subspaces of two grades give any basis of the third grade\n",
     "                    # e.g. i = 2, j = 2, k = 1, do basis (e12, e23, e13) and (e12, e23, e13) give any 1-blade basis? No. So\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +165,9 @@
     "        self.linear_right = MVLinear(algebra, in_features, in_features)\n",
     "        self.linear_left = MVLinear(algebra,in_features,out_features)\n",
     "\n",
-    "        self.normalization = nn.Identity()\n",
+    "        self.normalization = nn.Identity() #TODO\n",
     "\n",
-    "        self.product_paths = algebra.geometric_product_paths\n",
+    "        self.product_paths = algebra.geometric_product_paths()\n",
     "        self.weights = nn.Parameter(torch.empty(out_features,in_features,self.product_paths.sum()))\n",
     "\n",
     "        self.reset_parameters()\n",
@@ -184,7 +184,7 @@
     "        subspaces = self.algebra.subspaces\n",
     "        weights[:,:,self.product_paths] = self.weights\n",
     "        weights_repeated = weights.repeat_interleave(subspaces, dim = -3).repeat_interleave(subspaces, dim = -2). repeat_interleave(subspaces, dim = -1)\n",
-    "        return self.algebra.cayley * weights_repeated\n",
+    "        return self.algebra.cayley * weights_repeated #get sparse weights\n",
     "    \n",
     "    def forward(self,input):\n",
     "        input_right = self.linear_right(input)\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +203,9 @@
     "    def __init__(self, algebra, in_features, out_features):\n",
     "        super().__init__()\n",
     "        self.layers = nn.Sequential(\n",
-    "            MVLinear(algebra,in_features,out_features)#,\n",
+    "            MVLinear(algebra,in_features,out_features),\n",
     "            #MVSiLU(algebra,out_features),\n",
+    "            FullyConnectedGeometricProductLayer(algebra,out_features,out_features),\n",
     "            #MVLayerNorm(algebra,out_features)\n",
     "        )\n",
     "    def forward(self,input):\n",
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InvariantCGENN(nn.Module):\n",
+    "    def __init__(self, algebra, in_features, hidden_features, out_features, n_layers = 2):\n",
+    "        super().__init__()\n",
+    "        self.hidden_features = hidden_features\n",
+    "        self.cgemlp = CGEMLP(algebra, in_features, hidden_features, hidden_features, n_layers=n_layers)\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(hidden_features,hidden_features),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(hidden_features,out_features),\n",
+    "            nn.ReLU(),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self,input):\n",
+    "        h = self.cgemlp(input)\n",
+    "        return self.mlp(h[...,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -240,8 +264,8 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1024, 2, 4])\n",
-      "tensor([[ 0.0000,  0.3261,  0.0647,  0.0000],\n",
-      "        [ 0.0000, -0.7778,  0.2760,  0.0000]])\n"
+      "tensor([[ 0.0000, -1.2536, -0.4742,  0.0000],\n",
+      "        [ 0.0000,  0.8593, -0.5787,  0.0000]])\n"
      ]
     }
    ],
@@ -254,22 +278,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0, 1],\n",
+       "tensor([[1, 0],\n",
        "        [0, 1],\n",
        "        [0, 1],\n",
        "        ...,\n",
        "        [1, 0],\n",
-       "        [1, 0],\n",
+       "        [0, 1],\n",
        "        [1, 0]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -289,8 +313,8 @@
      "output_type": "stream",
      "text": [
       "torch.Size([1024, 2, 4])\n",
-      "tensor([[0., 0., 0., 0.],\n",
-      "        [1., 0., 0., 0.]])\n"
+      "tensor([[1., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0.]])\n"
      ]
     }
    ],
@@ -302,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,56 +335,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bryan\\AppData\\Local\\Temp\\ipykernel_15208\\30745984.py:19: UserWarning: nn.init.normal is now deprecated in favor of nn.init.normal_.\n",
+      "  nn.init.normal(self.weights,\n"
+     ]
+    }
+   ],
    "source": [
-    "model = CGEMLP(ca,4,32,1)"
+    "model = InvariantCGENN(ca,4,32,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model has 480 parameters.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\bryan\\AppData\\Local\\Temp\\ipykernel_24000\\524895709.py:7: UserWarning: Using a target size (torch.Size([1024])) that is different to the input size (torch.Size([1024, 4])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  loss = F.mse_loss(output.squeeze(-2), f)\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (4) must match the size of tensor b (1024) at non-singleton dimension 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m256\u001b[39m):\n\u001b[0;32m      6\u001b[0m     output \u001b[38;5;241m=\u001b[39m model(input_cl)\n\u001b[1;32m----> 7\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmse_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     adam\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m     10\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n",
-      "File \u001b[1;32md:\\Github\\Clifford-Algebra-Research\\.venv\\Lib\\site-packages\\torch\\nn\\functional.py:3365\u001b[0m, in \u001b[0;36mmse_loss\u001b[1;34m(input, target, size_average, reduce, reduction)\u001b[0m\n\u001b[0;32m   3362\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   3363\u001b[0m     reduction \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[1;32m-> 3365\u001b[0m expanded_input, expanded_target \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbroadcast_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3366\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_C\u001b[38;5;241m.\u001b[39m_nn\u001b[38;5;241m.\u001b[39mmse_loss(expanded_input, expanded_target, _Reduction\u001b[38;5;241m.\u001b[39mget_enum(reduction))\n",
-      "File \u001b[1;32md:\\Github\\Clifford-Algebra-Research\\.venv\\Lib\\site-packages\\torch\\functional.py:76\u001b[0m, in \u001b[0;36mbroadcast_tensors\u001b[1;34m(*tensors)\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function(tensors):\n\u001b[0;32m     75\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(broadcast_tensors, tensors, \u001b[38;5;241m*\u001b[39mtensors)\n\u001b[1;32m---> 76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_VF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbroadcast_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (4) must match the size of tensor b (1024) at non-singleton dimension 1"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "The model has 37313 parameters.\n",
+      "\n",
+      "Step: 0. Loss: 3.01\n",
+      "Step: 4. Loss: 2.11\n",
+      "Step: 8. Loss: 2.10\n",
+      "Step: 12. Loss: 2.08\n",
+      "Step: 16. Loss: 2.06\n",
+      "Step: 20. Loss: 2.03\n",
+      "Step: 24. Loss: 2.01\n",
+      "Step: 28. Loss: 2.01\n",
+      "Step: 32. Loss: 2.00\n",
+      "Step: 36. Loss: 2.00\n",
+      "Step: 40. Loss: 2.00\n",
+      "Step: 44. Loss: 2.00\n",
+      "Step: 48. Loss: 2.00\n",
+      "Step: 52. Loss: 2.00\n",
+      "Step: 56. Loss: 2.00\n",
+      "Step: 60. Loss: 2.00\n",
+      "Step: 64. Loss: 2.00\n",
+      "Step: 68. Loss: 2.00\n",
+      "Step: 72. Loss: 2.00\n",
+      "Step: 76. Loss: 2.00\n",
+      "Step: 80. Loss: 2.00\n",
+      "Step: 84. Loss: 2.00\n",
+      "Step: 88. Loss: 2.00\n",
+      "Step: 92. Loss: 2.00\n",
+      "Step: 96. Loss: 2.00\n",
+      "Step: 100. Loss: 2.00\n",
+      "Step: 104. Loss: 2.00\n",
+      "Step: 108. Loss: 2.00\n",
+      "Step: 112. Loss: 2.00\n",
+      "Step: 116. Loss: 2.00\n",
+      "Step: 120. Loss: 2.00\n",
+      "Step: 124. Loss: 2.00\n",
+      "Step: 128. Loss: 2.00\n",
+      "Step: 132. Loss: 2.00\n",
+      "Step: 136. Loss: 2.00\n",
+      "Step: 140. Loss: 2.00\n",
+      "Step: 144. Loss: 2.00\n",
+      "Step: 148. Loss: 2.00\n",
+      "Step: 152. Loss: 2.00\n",
+      "Step: 156. Loss: 2.00\n",
+      "Step: 160. Loss: 2.00\n",
+      "Step: 164. Loss: 2.00\n",
+      "Step: 168. Loss: 2.00\n",
+      "Step: 172. Loss: 2.00\n",
+      "Step: 176. Loss: 2.00\n",
+      "Step: 180. Loss: 2.00\n",
+      "Step: 184. Loss: 2.00\n",
+      "Step: 188. Loss: 2.00\n",
+      "Step: 192. Loss: 2.00\n",
+      "Step: 196. Loss: 2.00\n",
+      "Step: 200. Loss: 2.00\n",
+      "Step: 204. Loss: 2.00\n",
+      "Step: 208. Loss: 2.00\n",
+      "Step: 212. Loss: 2.00\n",
+      "Step: 216. Loss: 2.00\n",
+      "Step: 220. Loss: 2.00\n",
+      "Step: 224. Loss: 2.00\n",
+      "Step: 228. Loss: 2.00\n",
+      "Step: 232. Loss: 2.00\n",
+      "Step: 236. Loss: 2.00\n",
+      "Step: 240. Loss: 2.00\n",
+      "Step: 244. Loss: 2.00\n",
+      "Step: 248. Loss: 2.00\n",
+      "Step: 252. Loss: 2.00\n"
      ]
     }
    ],
